[package]
name = "secret"
version = "0.1.0"
authors = ["Antoni Boucher <bouanto@zoho.com>"]

[dependencies]
bitflags = "^0.7"
libc = "^0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.3.1"

[dependencies.glib]
git = "https://github.com/gtk-rs/glib"
version = "0.1.0"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.3.1"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/sys"
version = "0.3.1"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk"
version = "0.1.0"

[dependencies.secret-sys]
path = "../secret-sys"
version = "0.2.0"
