[package]
name = "secret"
version = "0.1.0"
authors = ["Antoni Boucher <bouanto@zoho.com>"]

[dependencies]
bitflags = "^0.7"
libc = "^0.2"
gio-sys = "0.3.1"
glib = "0.1.0"
glib-sys = "0.3.1"
gobject-sys = "0.3.1"
gtk = "0.1.0"

[dependencies.secret-sys]
git = "https://github.com/antoyo/secret-sys-rs"
version = "0.2.0"
